# rusty-toolkit

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: commands.rs  file_search.rs  mod.rs  password.rs
src/utils/: config.rs  database.rs  encryption.rs  errors.rs  mod.rs
