[package]
name = "rusty-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
indicatif = "0.17.9"
inquire = "0.7.5"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
